minor fixes to the language

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -868,7 +868,7 @@ the work of~\cite{Harper2017} which introduced the trained strategies that
 appeared in the top ranked strategies of Section~\ref{section:top_performances}
 did. In~\cite{Harper2017} it was shown that clever strategies managed to achieve
 mutual cooperation with stronger strategies whilst exploiting the weaker
-strategies. This could potentially be what is happening with the clever winners
+strategies. This could explain the clever winners
 of our analysis, and would explain the SSE distributions. This could also
 be the reason why ZDs fail to appear in the tops ranks -- they try to exploit
 all opponents and cannot actively adapt back to mutual cooperation against
@@ -983,13 +983,13 @@ Hammerstein1984}, however, we also showed that generosity pays off even in
 standard settings, and that in fact the only setting a strategy would want to be
 too provocable is when the matches are not long. Forgiveness as defined by R.
 Axerlod was not explored here. This was mainly because the two round states were
-not recorded during the data collection. That is something we would aim to
-incorporate in future work.
+not recorded during the data collection. This could be a topic of future work
+that examines the impact of considering more rounds of history.
 The features analysis also concluded that
 there is a significant importance in \textbf{adapting to the environment}, and
 more specifically, to the mean cooperator. 
 In standard tournaments a strategy would aim to be the
-mean the cooperator while in noisy tournaments the best performing players
+mean cooperator while in noisy tournaments the best performing players
 cooperate at a lower rate than the tournament population on average.
 Moreover, the manner in which a
 strategy achieves a given cooperation rate relative to the tournament population
