--- a/paper/main.tex
+++ b/paper/main.tex
@@ -872,10 +872,10 @@ strategies. This could explain the clever winners
 of our analysis, and would explain the SSE distributions. This could also
 be the reason why ZDs fail to appear in the tops ranks -- they try to exploit
 all opponents and cannot actively adapt back to mutual cooperation against
-stronger strategies, which requires more depth of memory. \footnote{Note that
+stronger strategies, which requires more depth of memory. Note that
 ZDs also tend to perform poorly in population games for a similar reason: they
 attempt to exploit other players using ZDs, failing to form a cooperative
-subpopulation. This makes them good invaders but poor resisters of invasion.}
+subpopulation. This makes them good invaders but poor resisters of invasion.
 
 \begin{figure}[!htbp]
     \centering
