specify that a strategy should be provocable in a setting and generous in the rest

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -199,7 +199,8 @@ and concludes that the properties of a successful strategy in the IPD are:
 \begin{itemize}
     \item \st{Do not be envious} Be a little bit envious
     \item Be ``nice'' in non-noisy environments or when game lengths are longer
-    \item Reciprocate both cooperation and defection appropriately; Be provocable and generous but not extremely
+    \item Reciprocate both cooperation and defection appropriately;
+    Be provocable in tournaments with short matches, and generous when matches are longer
     \item \st{Do not be too clever} It's ok to be clever
     \item Adapt to the environment; Adjust to the mean population cooperation
 \end{itemize}
@@ -895,10 +896,9 @@ would reciprocate on average with a probability of 0.58. In
 tournaments with noise a strategy is less likely to cooperate following a
 defection compared to standard tournaments, and in probabilistic ending
 tournaments a strategy will reciprocate a defection.
-This leads to revisiting the recommendation of being provocable to defections made
-by R. Axerlod. In fact only in tournaments with short matches should a strategy
-be provocable, in the rest of the settings a strategy should be more
-generous.
+This leads to adjusting the recommendation of being provocable to defections made
+by R. Axerlod. A strategy should be provocable in tournaments with short matches,
+but in the rest of the settings a strategy should be more generous.
 
 \begin{figure}[!htbp]
     \centering
@@ -1023,7 +1023,7 @@ based on the analysis that has been presented in this manuscript are:
 
 \begin{itemize}
     \item Be ``nice'' in non-noisy environments or when game lengths are longer
-    \item Be provocable but also generous when game lengths are longer
+    \item Be provocable in tournaments with short matches, and generous when matches are longer
     \item Be a little bit envious
     \item Be clever
     \item Adapt to the environment (including the population of strategies).
