adds citation to statement regarding ZDs

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -711,3 +711,11 @@ Conference on the Simulation of Adaptive Behavior (SAB-2000)},
  volume = {2},
  year = {2000}
 }
+
+@article{Knight2017evolution,
+  title={Evolution Reinforces Cooperation with the Emergence of
+  Self-Recognition Mechanisms: an empirical study of the Moran process for the iterated Prisoner's dilemma},
+  author={Knight, Vincent and Harper, Marc and Glynatsi, Nikoleta E and Campbell, Owen},
+  journal={arXiv preprint arXiv:1707.06920},
+  year={2017}
+}
