--- a/paper/main.tex
+++ b/paper/main.tex
@@ -876,7 +876,7 @@ all opponents and cannot actively adapt back to mutual cooperation against
 stronger strategies, which requires more depth of memory. Note that
 ZDs also tend to perform poorly in population games for a similar reason: they
 attempt to exploit other players using ZDs, failing to form a cooperative
-subpopulation. This makes them good invaders but poor resisters of invasion.
+subpopulation~\cite{Knight2017evolution}. This makes them good invaders but poor resisters of invasion.
 
 \begin{figure}[!htbp]
     \centering
