Minor consistency edits  (#30)
* compile pdf

* order citations

removes TODO

* refere to Tit For Tat as TFT instead of TfT in appendix

removes TODO

* cite raw data set

removes TODO

* maths C, D, R, S, T, P in introduction

* minor copy edits to introduction

* adds a bit on generosity and forgiveness in introduction

* fixes broken sentence for normalised rank

* minor copy edits to performance section

* fixes discussion on sse distributions and CD to C rates

* minor copy edits in evaluation of performance section

* rewrites discussion while trying to keep everyones inputs

* minor edits to abstract

* minor typos fixes by v.k.

Co-Authored-By: Vince Knight <vincent.knight@gmail.com>

* eliminates the initial be in abstract

* rephrases the 100 strategies sentence.

* tweaks forgiveness paragraph based on marc's comments

* softens property suggestion

* minor rewording for "the data and raw data"

* changes "a" to "the"

* minor fixes to the language

* compile pdf

* removes footnote

Co-Authored-By: Vince Knight <vincent.knight@gmail.com>

* specify that a strategy should be provocable in a setting and generous in the rest

* adds citation to statement regarding ZDs

Co-authored-by: Vince Knight <vincent.knight@gmail.com>

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -687,6 +687,19 @@ author = "J. H. Miller"
   howpublished = "\url{https://doi.org/10.5281/zenodo.3516652}"
 }
 
+@misc{raw_data,
+  author       = {Glynatsi, Nikoleta E.},
+  title        = {{A data set of 45686 Iterated Prisoner's Dilemma 
+                   tournaments' results [RAW DATA]}},
+  month        = apr,
+  year         = 2020,
+  publisher    = {Zenodo},
+  version      = {1.0.0},
+  doi          = {10.5281/zenodo.3753498},
+  url          = {https://doi.org/10.5281/zenodo.3753498}
+}
+
+
 @article{tzafestas-2000a,
  author = {Tzafestas, E.},
  booktitle = {From Animals to animals: Proceedings of the 6th International
@@ -697,4 +710,12 @@ Conference on the Simulation of Adaptive Behavior (SAB-2000)},
  title = {Toward adaptive cooperative behavior},
  volume = {2},
  year = {2000}
+}
+
+@article{Knight2017evolution,
+  title={Evolution Reinforces Cooperation with the Emergence of
+  Self-Recognition Mechanisms: an empirical study of the Moran process for the iterated Prisoner's dilemma},
+  author={Knight, Vincent and Harper, Marc and Glynatsi, Nikoleta E and Campbell, Owen},
+  journal={arXiv preprint arXiv:1707.06920},
+  year={2017}
 }
